[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "meme_miner"
version = "0.1.0"
description = "Meme and quote miner for Chinese video platforms"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
    "selectolax>=0.3.0",
    "typer>=0.12.0",
    "rich>=13.7.0",
    "pydantic>=2.6.0",
    "tenacity>=8.2.0",
    "pytest>=8.0.0",
]

[project.optional-dependencies]
orjson = ["orjson>=3.9.0"]

[project.scripts]
meme-miner = "meme_miner.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[tool.hatch.build.targets.wheel]
packages = ["src/meme_miner"]
